# ATA-ShellUI

./: .gitmodules  README.md  TODO.txt  dev_installer.sh  index.html  package.json  vite.config.ts
src/: App.vue  Browse.vue  Home.vue  Install.vue  List.vue  Settings.vue  TitleBar.vue  Uninstall.vue  main.ts  mods.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  data.rs  installation.rs  lib.rs  main.rs  mod_managing.rs  settings.rs  settings_managing.rs  uninstallation.rs
src-tauri/src/backend/: data.rs  installation.rs  misc.rs  mod.rs  mod_managing.rs  paths.rs  settings.rs  uninstallation.rs
src/Components/: Console.vue  Select.vue
src/assets/: _variables.scss
src/stores/: settings.ts
