[package]
name = "ata"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ata_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
thiserror = "2.0.18"
walkdir = "2.5.0"
zip = "8.6.0"
sevenz-rust = "0.6.1"
unrar = "0.5.8"
chrono = {version="0.4.44", features = ["serde"] }
dirs = "6.0.0"
shellexpand = "3.1.2"
tokio = "1.52.3"
tokyo = "1.0.0"
strum = { version="0.28.0", features= ["derive"] }

